--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Stock</title>
 
     <link rel="manifest" href="manifest.json">
 
@@ -18,7 +18,7 @@
 
 
     <!-- compiled css output -->
-    <link href="css/ionic.min.app.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -33,7 +33,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="stock">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
