--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+    <script src="js/services.js"></script>
+    <script src="js/filter.js"></script>
+    <script src="js/directives.js"></script>
 
+  </head>
   <body ng-app="stock">
     <ion-nav-view></ion-nav-view>
   </body>
