--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,14 @@
     <script src="js/services.js"></script>
     <script src="js/filter.js"></script>
     <script src="js/directives.js"></script>
-
+<meta charset="utf-8">
+    <!-- Third Party js -->
+    <script src="lib/d3/d3.min.js"></script>
+    <script src="lib/nvd3/build/nv.d3.js"></script>
+    <script src="lib/nv-chart/nv-chart.min.js"></script>
+    <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
+    <link href="lib/nv-chart/nv-chart.min.css" rel="stylesheet">
+    <link href="lib/nvd3/build/nv.d3.min.css" rel="stylesheet">
   </head>
   <body ng-app="stock">
     <ion-nav-view></ion-nav-view>
