--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/directives.js"></script>
 <meta charset="utf-8">
     <!-- Third Party js -->
+    <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
     <script src="lib/d3/d3.min.js"></script>
     <script src="lib/nvd3/build/nv.d3.js"></script>
     <script src="lib/nv-chart/nv-chart.min.js"></script>
