--- a/www/index.html
+++ b/www/index.html
@@ -27,15 +27,16 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filter.js"></script>
     <script src="js/directives.js"></script>
-<meta charset="utf-8">
+    <meta charset="utf-8">
     <!-- Third Party js -->
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
     <script src="lib/d3/d3.min.js"></script>
     <script src="lib/nvd3/build/nv.d3.js"></script>
